fix for height of modal content on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1307,7 +1307,7 @@ nav {
   }
   .modal-content {
     width: 100vw;
-    height: 100%;
+    height: calc(100% - 56px);
     max-height: none;
     border-radius: 0px;
   }
